--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -404,7 +404,7 @@ jobs:
           asset_content_type: text/plain
 
       - name: Publish Release
-        run: ./project/scripts/sbtPublish ";project scala3-bootstrapped ;publishSigned ;sonatypeBundleRelease"
+        run: ./project/scripts/sbtPublish
 
   build-sdk-package:
     uses: ./.github/workflows/build-sdk.yml
